--- a/src/webapp/day01/homework/day01/day01.html
+++ b/src/webapp/day01/homework/day01/day01.html
@@ -8,14 +8,12 @@
 
 <h1>静夜思</h1><br>
 <img src="libai.jpg" alt="" width="300" height="200"><br>
-<p>
     <ul>
-        <li>床前明月光</li>
-        <li>已是第上床</li>
-        <li>举头望明月</li>
-        <li>低头思故乡</li>
+        <li><p>床前明月光</p></li>
+        <li><p>疑是地上霜</p></li>
+        <li><p>举头望明月</p></li>
+        <li><p>低头思故乡</p></li>
     </ul>
-</p>
 
 </body>
 </html>
