--- a/src/webapp/day02/02选择器.html
+++ b/src/webapp/day02/02选择器.html
@@ -25,10 +25,10 @@
 <!--
     选择器：1、标签名选择器格式：标签名（样式代码）选取页面中所有同名标签
            2、id选择器格式：#d1{样式代码} 选取页面中某一个元素时使用
-           3、类选择器格式：class{样式代码} 选择多个不相关的元素时使用
-           4、分组选择器格式：#d1,c1,h3{背景颜色样式代码}
-           5、任意元素选择器
-           6、属性选择器
+           3、类选择器格式：class{样式代码} 选择多个不相关的元素时使用,给元素添加相同的class进行选取
+           4、分组选择器格式：div,.class,#id, 将多个选择器合并成一个选择器使用
+           5、任意元素选择器格式：*{样式代码} 选取页面中所有元素
+           6、属性选择器格式：标签名[属性名=‘值’]{样式代码} 通过元素的属性选择元素
 -->
 
 <input type="text"> <input type="password">
