--- a/src/webapp/day02/03选择器练习.html
+++ b/src/webapp/day02/03选择器练习.html
@@ -5,21 +5,34 @@
     <title>练习</title>
 
     <style>
-        #d3{ color: red }
+        h1{ background-color: pink }
+        #chi{ color: green }
+        .c{ color: yellow }
+
+        /*#d3{ color: red }
         .liu{ color: green }
         h3{ color: yellow }
-        h3,#d3,h2{ background-color: pink }
+        h3,#d3,h2{ background-color: pink }*/
     </style>
 </head>
 <body>
 
-<div id="liu">刘德华</div>
+<h1>吃喝玩乐</h1>
+<div id="chi">吃饭</div>
+<div><span class="c">睡觉</span></div>
+<div>
+    <span>
+        <div>打豆豆</div>
+    </span>
+</div>
+
+<!--<div id="liu">刘德华</div>
 <div>张学友</div>
 <div id="d3">郭富城</div>
 <span>香蕉</span> <span class="liu">苹果</span> <span>芒果</span>
 <h2>电视</h2>
 <h2>手机</h2>
-<h3>空调</h3>
+<h3>空调</h3>-->
 
 </body>
 </html>
