--- a/src/webapp/day02/04选择器续.html
+++ b/src/webapp/day02/04选择器续.html
@@ -13,8 +13,8 @@
 <body>
 
 <!--
-    子孙后代选择器：(包含子孙后代)格式：div div span(样式代码)
-    子元素选择器：（不包含子孙后代）格式：div>div>span(样式代码)
+    子孙后代选择器：(匹配div里面的所有包含的子孙后代)格式：div div span(样式代码)
+    子元素选择器：（匹配div里面的所有不包含子孙后代）格式：div>div>span(样式代码)
 -->
 
 <span>s1</span>
