--- a/src/webapp/day03/03综合练习.html
+++ b/src/webapp/day03/03综合练习.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>练习</title>
     <style>
+        body{
+            font: 12px "simhei", Arial, Helvetica, sans-serif;
+        }
         body>div{
             width: 611px;
             height: 376px;
