--- a/src/webapp/day03/04综合练习.html
+++ b/src/webapp/day03/04综合练习.html
@@ -16,10 +16,10 @@
             overflow: hidden;
         }
         div>div{
-            width: 253px;
+            width: 245px;
             height: 232px;
-            margin-top: 39px;
-            margin-left: 25px;
+            margin-top: 68px;
+            margin-left: 36px;
         }
         .p1{
             font-size: 32px;
@@ -29,9 +29,7 @@
         }
         .p2{
             font-size: 12px;
-            margin-bottom: 24px;
             color: #666666;
-            font-weight: lighter;
         }
         .p3{
             font-size: 24px;
@@ -59,7 +57,7 @@
 
 <div>
     <div>
-        <p class="p1">颜值&nbsp;&nbsp;&nbsp;&nbsp;框不住</p>
+        <p class="p1">颜值&nbsp;&nbsp;框不住</p>
         <p class="p2">酷睿双核i5处理器|256GB SSD| 8GB内存<br>
             英特尔HD显卡620含共享显卡内存</p>
         <p class="p3">￥6888.00</p>
