--- a/src/webapp/day04/05综合练习.html
+++ b/src/webapp/day04/05综合练习.html
@@ -22,7 +22,17 @@
             color: white;
             border-radius: 2px; /*圆角像素*/
         }
-        a_div{
+        #top_div>img{
+            margin: 8px 0 0 10px;
+        }
+        #top_div>span{
+            color: white;
+            font-size: 16px;
+            /*如果需要对页面中否一个元素进行微调时，使用相对定位*/
+            position: relative;
+            top: -6px;
+        }
+        .c_div{
             width: 366px;
             height: 198px;
             padding: 0 0 0 12px;
@@ -37,15 +47,13 @@
             width: 366px;
             height: 20px;
             list-style-type: none; /*去掉图标*/
-            padding: 0;
+            padding: 0; /*去掉自带的缩进左边距离*/
+            overflow: hidden; /*解决好高度为零的高度为零的异常*/
+            margin: 0;
         }
-        ul>li>a{
-            text-decoration: none; /*去除下划线*/
-            width: 36px;
-            height: 14px;
+        li{
             float: left;
             margin-right: 10px;
-            color: #0aa1ed;
         }
     </style>
 </head>
