--- a/src/webapp/travel/景区动态.html
+++ b/src/webapp/travel/景区动态.html
@@ -9,8 +9,8 @@
 
 <div>
     <div class="a">
-        <p id="top">景点概况</p>
-        <p id="bottom">沈阳景点主要集中在沈河区，故宫博物院、张氏帅府、北陵公园等都是沈阳标志性景点，也是到沈阳必去的景点。</p>
+        <p id="p">景点概况</p>
+        <p id="p1">沈阳景点主要集中在沈河区，故宫博物院、张氏帅府、北陵公园等都是沈阳标志性景点，也是到沈阳必去的景点。</p>
     </div>
     <div>
         <div class="b_left">
