--- a/src/webapp/travel/景区动态.html
+++ b/src/webapp/travel/景区动态.html
@@ -6,63 +6,141 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!--正文-->
+<div id="content">
+    <!--正文头-->
+    <div id="content_top">
+        <p id="content_top_p1">景点概况</p>
+        <p id="content_top_p2">沈阳景点主要集中在沈河区，故宫博物院、张氏帅府、北陵公园等都是沈阳标志性景点，也是到沈阳必去的景点。</p>
+    </div>
+    <!--正文中间部位-->
+    <div class="content_con">
+        <!--正文左文字右图片-->
+        <div class="content_con_d">
+            <div class="content_con_d_left">
+                <a href="">北陵公园</a>
+                <p>坐落着皇太极与孝端文皇后的陵墓</p>
+                <ul>
+                    <a href=""><li>情人岛</li></a>
+                    <a href=""><li>月牙城</li></a>
+                    <a href=""><li>锦绣园</li></a>
+                    <a href=""><li>石望庄</li></a>
+                </ul>
+            </div>
+            <div class="content_con_d_right">
+                <div class="content_con_d_right_l">
+                    <img src="图片/111.jpeg" alt="">
+                </div>
+                <div class="content_con_d_right_r">
+                    <div class="content_con_d_right_r_1">
+                        <img src="图片/112.jpeg" alt="">
+                    </div>
+                    <div class="content_con_d_right_r_1">
+                        <img src="图片/113.jpeg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--正文中间部位-->
+    <div class="content_con">
+        <!--正文左文字右图片-->
+        <div class="content_con_d">
+            <div class="content_con_d_left">
+                <a href="">九一八历史博物馆</a>
+                <p>为纪念震惊中外的九一八事变而修建，参观时能够学习历史，缅怀前烈</p>
+                <ul>
+                    <a href=""><li>柳条桥</li></a>
+                    <a href=""><li>警世钟</li></a>
+                    <a href=""><li>纪念碑</li></a>
+                    <a href=""><li>反战碑</li></a>
+                </ul>
+            </div>
+            <div class="content_con_d_right">
+                <div class="content_con_d_right_l">
+                    <img src="图片/201.jpeg" alt="">
+                </div>
+                <div class="content_con_d_right_r">
+                    <div class="content_con_d_right_r_1">
+                        <img src="图片/202.jpeg" alt="">
+                    </div>
+                    <div class="content_con_d_right_r_1">
+                        <img src="图片/203.jpeg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--正文中间部位-->
+    <div class="content_con">
+        <!--正文左文字右图片-->
+        <div class="content_con_d">
+            <div class="content_con_d_left">
+                <a href="">沈阳方特欢乐世界</a>
+                <p>科幻互动体验为特色，多数项目老少皆宜</p>
+                <ul>
+                    <a href=""><li>波浪翻滚</li></a>
+                    <a href=""><li>空中飞舞</li></a>
+                    <a href=""><li>太空飞船</li></a>
+                    <a href=""><li>海螺湾</li></a>
+                </ul>
+            </div>
+            <div class="content_con_d_right">
+                <div class="content_con_d_right_l">
+                    <img src="图片/301.jpg" alt="">
+                </div>
+                <div class="content_con_d_right_r">
+                    <div class="content_con_d_right_r_1">
+                        <img src="图片/302.jpg" alt="">
+                    </div>
+                    <div class="content_con_d_right_r_1">
+                        <img src="图片/303.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--正文中间部位-->
+    <div class="content_con">
+        <!--正文左文字右图片-->
+        <div class="content_con_d">
+            <div class="content_con_d_left">
+                <a href="">天主教堂</a>
+                <p>典型哥特式建筑，为东北地区天主教中心</p>
+                <ul>
+                    <a href=""><li>主教府</li></a>
+                    <a href=""><li>天主教堂爱国会</li></a>
+                    <a href=""><li>卡力马天教堂</li></a>
+                </ul>
+            </div>
+            <div class="content_con_d_right">
+                <div class="content_con_d_right_l">
+                    <img src="图片/001.jpg" alt="">
+                </div>
+                <div class="content_con_d_right_r">
+                    <div class="content_con_d_right_r_1">
+                        <img src="图片/002.jpeg" alt="">
+                    </div>
+                    <div class="content_con_d_right_r_1">
+                        <img src="图片/003.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+   <!--正文下部分-->
+    <div id="content_bottom">
+        <div class="content_bottom_left">
+            <img src="图片/401.jpeg" alt="">
+        </div>
+        <div class="content_bottom_right">
+            <div class="content_bottom_right_1"><img src="图片/402.jpeg" alt=""></div>
+            <div class="content_bottom_right_1"><img src="图片/403.jpeg" alt=""></div>
+            <div class="content_bottom_right_1"><img src="图片/404.jpeg" alt=""></div>
+            <div class="content_bottom_right_1"><img src="图片/405.jpeg" alt=""></div>
+        </div>
+    </div>
 
-<div>
-    <div class="a">
-        <p id="p">景点概况</p>
-        <p id="p1">沈阳景点主要集中在沈河区，故宫博物院、张氏帅府、北陵公园等都是沈阳标志性景点，也是到沈阳必去的景点。</p>
-    </div>
-    <div>
-        <div class="b_left">
-            <a href="">北陵公园</a>
-            <p>坐落着皇太极与孝端文皇后的陵墓</p>
-            <ul>
-                <a href=""><li>情人岛</li></a>
-                <a href=""><li>月牙城</li></a>
-                <a href=""><li>锦绣园</li></a>
-                <a href=""><li>石望庄</li></a>
-            </ul>
-        </div>
-        <div class="b_right">
-            <img src="图片/111.jpeg" alt="">
-            <img src="图片/112.jpeg" alt="">
-            <img src="图片/113.jpeg" alt="">
-        </div>
-    </div>
-    <div>
-        <div class="b_left">
-            <a href="">九一八历史博物馆</a>
-            <p>为纪念震惊中外的九一八事变而修建，参观时能够学习历史，缅怀前烈</p>
-            <ul>
-                <a href=""><li>柳条桥</li></a>
-                <a href=""><li>警世钟</li></a>
-                <a href=""><li>纪念碑</li></a>
-                <a href=""><li>反战碑</li></a>
-            </ul>
-        </div>
-        <div class="b_right">
-            <img src="图片/201.jpeg" alt="">
-            <img src="图片/202.jpeg" alt="">
-            <img src="图片/203.jpeg" alt="">
-        </div>
-    </div>
-    <div>
-        <div class="b_left">
-            <a href="">沈阳方特欢乐世界</a>
-            <p>科幻互动体验为特色，多数项目老少皆宜</p>
-            <ul>
-                <a href=""><li>波浪翻滚</li></a>
-                <a href=""><li>空中飞舞</li></a>
-                <a href=""><li>太空飞船</li></a>
-                <a href=""><li>海螺湾</li></a>
-            </ul>
-        </div>
-        <div class="b_right">
-            <img src="图片/301.jpg" alt="">
-            <img src="图片/302.jpg" alt="">
-            <img src="图片/303.jpg" alt="">
-        </div>
-    </div>
 </div>
 
 </body>
