--- a/src/webapp/travel/景区动态.html
+++ b/src/webapp/travel/景区动态.html
@@ -29,7 +29,7 @@
             </div>
             <div class="content_con_d_right">
                 <div class="content_con_d_right_l">
-                    <img src="图片/111.jpeg" alt="">
+                    <img src="图片/111.jpeg" alt="" width="100%">
                 </div>
                 <div class="content_con_d_right_r">
                     <div class="content_con_d_right_r_1">
@@ -58,7 +58,7 @@
             </div>
             <div class="content_con_d_right">
                 <div class="content_con_d_right_l">
-                    <img src="图片/201.jpeg" alt="">
+                    <img src="图片/201.jpeg" alt="" width="100%">
                 </div>
                 <div class="content_con_d_right_r">
                     <div class="content_con_d_right_r_1">
@@ -87,7 +87,7 @@
             </div>
             <div class="content_con_d_right">
                 <div class="content_con_d_right_l">
-                    <img src="图片/301.jpg" alt="">
+                    <img src="图片/301.jpg" alt="" width="100%">
                 </div>
                 <div class="content_con_d_right_r">
                     <div class="content_con_d_right_r_1">
@@ -115,7 +115,7 @@
             </div>
             <div class="content_con_d_right">
                 <div class="content_con_d_right_l">
-                    <img src="图片/001.jpg" alt="">
+                    <img src="图片/001.jpg" alt="" width="100%">
                 </div>
                 <div class="content_con_d_right_r">
                     <div class="content_con_d_right_r_1">
@@ -128,19 +128,48 @@
             </div>
         </div>
     </div>
+    <!--正文下文字-->
+    <div id="content_con_w">
+        <div class="content_con_w_1">
+            <h2>沈阳全景</h2>
+        </div>
+        <div class="content_con_w_2">
+            <ul>
+                <li><a href="" style="text-decoration: none">冬日泡温泉&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+                <li><a href="" style="text-decoration: none">沈阳必游TPO8&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+                <li><a href="" style="text-decoration: none">方特欢乐世界&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+                <li><a href="" style="text-decoration: none">特色博物馆盘点&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+                <li><a href="" style="text-decoration: none">滑雪逛辽宁&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+            </ul>
+        </div>
+    </div>
    <!--正文下部分-->
     <div id="content_bottom">
         <div class="content_bottom_left">
             <img src="图片/401.jpeg" alt="">
         </div>
         <div class="content_bottom_right">
-            <div class="content_bottom_right_1"><img src="图片/402.jpeg" alt=""></div>
-            <div class="content_bottom_right_1"><img src="图片/403.jpeg" alt=""></div>
-            <div class="content_bottom_right_1"><img src="图片/404.jpeg" alt=""></div>
-            <div class="content_bottom_right_1"><img src="图片/405.jpeg" alt=""></div>
+            <div class="content_bottom_right_top"><img src="图片/402.jpeg" alt="" width="100%"></div>
+            <div class="content_bottom_right_top"><img src="图片/403.jpeg" alt="" width="100%"></div>
+            <div class="content_bottom_right_top_1"><img src="图片/404.jpeg" alt="" width="100%"></div>
+            <div class="content_bottom_right_top_1"><img src="图片/405.jpeg" alt="" width="100%"></div>
         </div>
     </div>
-
+    <!--正文下部分二-->
+    <div id="content_bottom_1">
+        <div class="content_bottom_1_right">
+            <div class="content_bottom_1_right_1"><img src="图片/406.jpeg" alt="" width="100%"></div>
+            <div class="content_bottom_1_right_1"><img src="图片/407.jpeg" alt="" width="100%"></div>
+        </div>
+        <div class="content_bottom_1_right_2">
+            <img src="图片/408.jpeg" alt="" width="100%">
+            <h2>沈阳五里河体育馆</h2>
+        </div>
+        <div class="content_bottom_1_right">
+            <div class="content_bottom_1_right_1"><img src="图片/409.jpeg" alt="" width="100%"></div>
+            <div class="content_bottom_1_right_1"><img src="图片/410.jpeg" alt="" width="100%"></div>
+        </div>
+    </div>
 </div>
 
 </body>
