--- a/src/webapp/travel/scenic.html
+++ b/src/webapp/travel/scenic.html
@@ -11,7 +11,7 @@
     <!--正文头-->
     <div id="content_top">
         <p id="content_top_p1">景点概况</p>
-        <p id="content_top_p2">沈阳景点主要集中在沈河区，故宫博物院、张氏帅府、北陵公园等都是沈阳标志性景点，也是到沈阳必去的景点。</p>
+        <p id="content_top_p2">&nbsp;&nbsp;沈阳景点主要集中在沈河区，故宫博物院、张氏帅府、北陵公园等都是沈阳标志性景点，也是到沈阳必去的景点。</p>
     </div>
     <!--正文中间部位-->
     <div class="content_con">
@@ -29,14 +29,14 @@
             </div>
             <div class="content_con_d_right">
                 <div class="content_con_d_right_l">
-                    <img src="图片/111.jpeg" alt="" width="100%">
+                    <img src="photo/111.jpeg" alt="" width="100%">
                 </div>
                 <div class="content_con_d_right_r">
                     <div class="content_con_d_right_r_1">
-                        <img src="图片/112.jpeg" alt="">
+                        <img src="photo/112.jpeg" alt="">
                     </div>
                     <div class="content_con_d_right_r_1">
-                        <img src="图片/113.jpeg" alt="">
+                        <img src="photo/113.jpeg" alt="">
                     </div>
                 </div>
             </div>
@@ -58,14 +58,14 @@
             </div>
             <div class="content_con_d_right">
                 <div class="content_con_d_right_l">
-                    <img src="图片/201.jpeg" alt="" width="100%">
+                    <img src="photo/201.jpeg" alt="" width="100%">
                 </div>
                 <div class="content_con_d_right_r">
                     <div class="content_con_d_right_r_1">
-                        <img src="图片/202.jpeg" alt="">
+                        <img src="photo/202.jpeg" alt="">
                     </div>
                     <div class="content_con_d_right_r_1">
-                        <img src="图片/203.jpeg" alt="">
+                        <img src="photo/203.jpeg" alt="">
                     </div>
                 </div>
             </div>
@@ -87,14 +87,14 @@
             </div>
             <div class="content_con_d_right">
                 <div class="content_con_d_right_l">
-                    <img src="图片/301.jpg" alt="" width="100%">
+                    <img src="photo/301.jpg" alt="" width="100%">
                 </div>
                 <div class="content_con_d_right_r">
                     <div class="content_con_d_right_r_1">
-                        <img src="图片/302.jpg" alt="">
+                        <img src="photo/302.jpg" alt="">
                     </div>
                     <div class="content_con_d_right_r_1">
-                        <img src="图片/303.jpg" alt="">
+                        <img src="photo/303.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -115,14 +115,14 @@
             </div>
             <div class="content_con_d_right">
                 <div class="content_con_d_right_l">
-                    <img src="图片/001.jpg" alt="" width="100%">
+                    <img src="photo/001.jpg" alt="" width="100%">
                 </div>
                 <div class="content_con_d_right_r">
                     <div class="content_con_d_right_r_1">
-                        <img src="图片/002.jpeg" alt="">
+                        <img src="photo/002.jpeg" alt="">
                     </div>
                     <div class="content_con_d_right_r_1">
-                        <img src="图片/003.jpg" alt="">
+                        <img src="photo/003.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -143,34 +143,59 @@
             </ul>
         </div>
     </div>
-   <!--正文下部分-->
+    <!--正文下部分-->
     <div id="content_bottom">
         <div class="content_bottom_left">
-            <img src="图片/401.jpeg" alt="">
+            <img src="photo/401.jpeg" alt="">
         </div>
         <div class="content_bottom_right">
-            <div class="content_bottom_right_top"><img src="图片/402.jpeg" alt="" width="100%"></div>
-            <div class="content_bottom_right_top"><img src="图片/403.jpeg" alt="" width="100%"></div>
-            <div class="content_bottom_right_top_1"><img src="图片/404.jpeg" alt="" width="100%"></div>
-            <div class="content_bottom_right_top_1"><img src="图片/405.jpeg" alt="" width="100%"></div>
+            <div class="content_bottom_right_top"><img src="photo/402.jpeg" alt="" width="100%"></div>
+            <div class="content_bottom_right_top"><img src="photo/403.jpeg" alt="" width="100%"></div>
+            <div class="content_bottom_right_top_1"><img src="photo/404.jpeg" alt="" width="100%"></div>
+            <div class="content_bottom_right_top_1"><img src="photo/405.jpeg" alt="" width="100%"></div>
         </div>
     </div>
     <!--正文下部分二-->
     <div id="content_bottom_1">
         <div class="content_bottom_1_right">
-            <div class="content_bottom_1_right_1"><img src="图片/406.jpeg" alt="" width="100%"></div>
-            <div class="content_bottom_1_right_1"><img src="图片/407.jpeg" alt="" width="100%"></div>
+            <div class="content_bottom_1_right_1"><img src="photo/406.jpeg" alt="" width="100%"></div>
+            <div class="content_bottom_1_right_1"><img src="photo/407.jpeg" alt="" width="100%"></div>
         </div>
         <div class="content_bottom_1_right_2">
-            <img src="图片/408.jpeg" alt="" width="100%">
+            <img src="photo/408.jpeg" alt="" width="100%">
             <h2>沈阳五里河体育馆</h2>
         </div>
         <div class="content_bottom_1_right">
-            <div class="content_bottom_1_right_1"><img src="图片/409.jpeg" alt="" width="100%"></div>
-            <div class="content_bottom_1_right_1"><img src="图片/410.jpeg" alt="" width="100%"></div>
+            <div class="content_bottom_1_right_1"><img src="photo/409.jpeg" alt="" width="100%"></div>
+            <div class="content_bottom_1_right_1"><img src="photo/410.jpeg" alt="" width="100%"></div>
+        </div>
+    </div>
+    <!--地图部位-->
+    <div class="map">
+        <a href=""><img src="photo/地图.png" alt="" width="100%"></a>
+    </div>
+    <!--底部-->
+    <div id="bottom">
+        <div class="bottom_top">
+            <div class="bottom_top_left">
+                <h3>旅游网</h3>
+                <p>中国年轻一代用的更多的网站，上亿旅行者共同打造的“旅游神器”</p>
+            </div>
+            <div class="bottom_top_left_1">
+                <h3>关于我们</h3>
+                <p>联系我们、隐私政策、商城平台服务协议、网站地图</p>
+            </div>
+            <div class="bottom_top_left_1">
+                <h3>旅行服务</h3>
+                <p>旅行攻略、旅行保险、旅行指南、旅行问答、旅行特价</p>
+            </div>
+            <div class="bottom_top_left_1"><img src="photo/log1.png" alt=""></div>
+            <div class="bottom_top_left_1"><img src="photo/log2.png" alt=""></div>
+        </div>
+        <div class="bottom_bottom">
+            <div><h1>驴友网</h1></div>
         </div>
     </div>
 </div>
-
 </body>
 </html>
