--- a/src/webapp/day01/07表单form.html
+++ b/src/webapp/day01/07表单form.html
@@ -22,7 +22,7 @@
                 如果后面不加value，则提交的内容为on，需要必须添加value指定提交内容
     多选框：<input type="checkbox">
          checked  设置默认选中（单选和多选共用）
-         id="r1"<label><>/label>  扩大选择区域（单选多选共用）
+         id="r1"<label></label>  扩大选择区域（单选多选共用）
     日期选择器：<input type="date">
     文件选择器：<input type="file">
     文本域标签:<textarea></textarea>
