--- a/src/webapp/travel/scenic.html
+++ b/src/webapp/travel/scenic.html
@@ -26,7 +26,7 @@
         </div>
         <!--首页照片-->
         <div id="header_content">
-            <img src="photo/首页.jpg" alt="" width="100%" onclick="fn">
+            <div class="header_content_1" onclick="fn"><img src="photo/首页.jpg" alt="" width="100%"></div>
             <p>来一场说走就走的旅行</p>
         </div>
         <!--首页下-->
@@ -230,7 +230,7 @@
 
 <script id="d1">
     function fn() {
-        header_content.innerHTML = "<img src='photo/首页2.jpg' width='100%'>";
+        header_content_1.innerHTML = "<img src='photo/首页2.jpg' width='100%'>";
     }
 </script>
 </body>
