--- a/src/webapp/travel/scenic.html
+++ b/src/webapp/travel/scenic.html
@@ -12,6 +12,7 @@
     <div id="header">
         <div class="header_top">
             <h1>驴友网</h1>
+            <img src="photo/驴友.jpg" alt="" width="100px" height="60px">
         </div>
         <!--导航栏-->
         <div class="header_top_right">
@@ -26,8 +27,7 @@
         </div>
         <!--首页照片-->
         <div id="header_content">
-            <div class="header_content_1" onclick="fn"><img src="photo/首页.jpg" alt="" width="100%"></div>
-            <p>来一场说走就走的旅行</p>
+            <img src="photo/首页.jpg" alt="" width="100%" height="510px">
         </div>
         <!--首页下-->
         <div id="header_bottom">
@@ -228,7 +228,7 @@
     </div>
 </div>
 
-<script id="d1">
+<script>
     function fn() {
         header_content_1.innerHTML = "<img src='photo/首页2.jpg' width='100%'>";
     }
