--- a/src/webapp/travel/scenic.html
+++ b/src/webapp/travel/scenic.html
@@ -37,16 +37,20 @@
             <div class="header_bottom_1"><img src="photo/d.jpeg" alt="" width="100%"></div>
             <div class="header_bottom_1"><img src="photo/e.jpeg" alt="" width="100%"></div>
         </div>
-
         <!--首页下照片墙-->
         <div id="m_bo2">
-            <div id="m_bot">故宫（英语：Mukden Palace）是中国仅存的两大宫殿建筑群之一，又称盛京皇宫，位于辽宁省沈阳市，为清朝初期的皇宫，始建于后金天命十年（1625年）。<br>
+            <div id="m_bot">故宫（英语：Mukden Palace）是中国仅存的两大宫殿建筑群之一，又称盛京皇宫，
+                位于辽宁省沈阳市，为清朝初期的皇宫，始建于后金天命十年（1625年）。<br>
                 故宫在清朝迁都北京后，被称作“陪都宫殿”，是中国著名的古代宫廷艺术博物馆，藏品中包含十分丰富的宫廷艺术品。<br>
-                沈阳故宫博物院，是清代初期营建和使用的皇家宫苑，始建于1625年（明天启五年，后金天命十年）。沈阳故宫占地面积六万多平方米，有古建筑114座，500多间，至今保存完好，是一处包含着丰富历史文化内涵的古代遗址。在宫廷遗址上建立的沈阳故宫博物院是著名的古代宫廷艺术博物馆，藏品中包含十分丰富的宫廷艺术品。<br>
-                沈阳的美食佳肴历史悠久，制作精湛，在满族菜肴基础上，借鉴和发展了传统宫廷的精良技术，又荟萃了中国名菜之精华，形成了自己的独特风格。满汉全席是最具有代表性的。由于历史上，沈阳一直由少数民族和汉族轮流统治，因此也传入了各民族的风味小吃。比如回民小吃马家烧麦，满族小吃那家白肉血肠，朝鲜族的打糕、烤牛肉、西塔大冷面等。沈阳也有自己的传统小吃老边饺子，老山记海城馅饼。
+                沈阳故宫博物院，是清代初期营建和使用的皇家宫苑，始建于1625年（明天启五年，后金天命十年）。
+                沈阳故宫占地面积六万多平方米，有古建筑114座，500多间，至今保存完好，是一处包含着丰富历史文化内涵的古代遗址。
+                在宫廷遗址上建立的沈阳故宫博物院是著名的古代宫廷艺术博物馆，藏品中包含十分丰富的宫廷艺术品。<br>
+                沈阳的美食佳肴历史悠久，制作精湛，在满族菜肴基础上，借鉴和发展了传统宫廷的精良技术，又荟萃了中国名菜之精华，
+                形成了自己的独特风格。满汉全席是最具有代表性的。由于历史上，沈阳一直由少数民族和汉族轮流统治，
+                因此也传入了各民族的风味小吃。比如回民小吃马家烧麦，满族小吃那家白肉血肠，朝鲜族的打糕、烤牛肉、西塔大冷面等。
+                沈阳也有自己的传统小吃老边饺子，老山记海城馅饼。
             </div>
         </div>
-
     </div>
     <!--正文头-->
     <div id="content_top">
