--- a/src/webapp/day08/05栅格系统.html
+++ b/src/webapp/day08/05栅格系统.html
@@ -57,9 +57,25 @@
   </div>
 </div>
 
-<h3>列便宜</h3>
+<h3>列偏移</h3>
 <div class="row">
   <div class="col-md-6 col-md-offset-4">六</div>
+</div>
+
+<!--col-md设置中等显示器 col-sm设置平板设备 col-xs设置手机显示设备-->
+<div class="col-md-2 col-sm-3 col-xs-6">小丫丫</div>
+<div class="col-md-2 col-sm-3 col-xs-6">小丫丫</div>
+<div class="col-md-2 col-sm-3 col-xs-6">小丫丫</div>
+<div class="col-md-2 col-sm-3 col-xs-6">小丫丫</div>
+<div class="col-md-2 col-sm-3 col-xs-6">小丫丫</div>
+<div class="col-md-2 col-sm-3 col-xs-6">小丫丫</div>
+
+<div class="row">
+  <!--默认平板设备和手机设备时，一行显示一个，img-responsive设置响应式图片-->
+  <div class="col-md-3 col-sm-2 col-lg-2"><img class="img-responsive" src="../meinv.jpg" alt=""></div>
+  <div class="col-md-3 col-sm-2 col-lg-2"><img class="img-responsive" src="../meinv.jpg" alt=""></div>
+  <div class="col-md-3 col-sm-2 col-lg-2"><img class="img-responsive" src="../meinv.jpg" alt=""></div>
+  <div class="col-md-3 col-sm-2 col-lg-2"><img class="img-responsive" src="../meinv.jpg" alt=""></div>
 </div>
 
 </body>
