--- a/src/webapp/travel/scenic.html
+++ b/src/webapp/travel/scenic.html
@@ -27,7 +27,7 @@
         </div>
         <!--首页照片-->
         <div id="header_content">
-            <img src="photo/首页.jpg" alt="" width="100%" height="510px">
+            <img src="photo/首页.jpg" alt="" width="100%" height="510px" onclick="fn()">
         </div>
         <!--首页下-->
         <div id="header_bottom">
@@ -244,7 +244,17 @@
 
 <script>
     function fn() {
-        header_content_1.innerHTML = "<img src='photo/首页2.jpg' width='100%'>";
+        header_content.innerHTML = "<img src='photo/首页2.jpg' width='100%' onclick='fn1()'>";
+    }
+</script>
+<script>
+    function fn1() {
+        header_content.innerHTML = "<img src='photo/首页3.jpg' width='100%' onclick='fn2()'>";
+    }
+</script>
+<script>
+    function fn2() {
+        header_content.innerHTML = "<img src='photo/首页.jpg' width='100%'>";
     }
 </script>
 </body>
